# distribuidoras-energia-analise

./: README.md
distribuidoras_energia_analise/: .env.exemple  .gitignore  README.md  pyproject.toml  task1.md  task2.md
distribuidoras_energia_analise/configs/: sources.yml
distribuidoras_energia_analise/docs/: architecture.md  business_case.md  data_dictionary.md  data_sources.md  setup_guide.md
distribuidoras_energia_analise/src/distribuidoras_energia_analise/: cli.py
distribuidoras_energia_analise/src/distribuidoras_energia_analise/ingestion/bronze/: metadata.py  pipeline.py  writer.py
distribuidoras_energia_analise/src/distribuidoras_energia_analise/ingestion/sources/: base.py  ckan.py  ckan_csv.py  loader.py  registry.py
distribuidoras_energia_analise/tests/: task3.md  test.py
