[project]
name = "distribuidoras-energia-analise"
version = "0.1.0"
description = ""
authors = [
    {name = "rafael",email = "devrafaelalvarenga@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "distribuidoras_energia_analise", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
